...
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_news_title_text_view">

        <AutoCompleteTextView
            android:id="@+id/news_item_category_text_auto_complete_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/news_item_category"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

...
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/news_item_publish_date_end_text_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/news_item_category_text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/news_item_publish_date_start_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:hint="@string/news_item_date_format" />
    </com.google.android.material.textfield.TextInputLayout>

...
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/news_item_publish_date_start_text_input_layout"
        app:layout_constraintTop_toBottomOf="@id/news_item_category_text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/news_item_publish_date_end_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:hint="@string/news_item_date_format" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/filter_news_active_material_check_box"
        style="@style/LargeBlackTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/news_item_active"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/news_item_publish_date_start_text_input_layout" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/filter_news_inactive_material_check_box"
        style="@style/LargeBlackTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/news_item_not_active"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_news_active_material_check_box" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/filter_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/filter"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_news_inactive_material_check_box" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/filtering_claim_title_text_color"
        app:layout_constraintStart_toStartOf="parent"
...
