...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/news_item_material_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="6dp"
        android:checkable="true"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/news_item_author_text_view"
                android:layout_marginTop="24dp"
                android:layout_marginStart="13dp"/>

            <TextView
                android:id="@+id/news_item_published_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/news_item_published_icon_image_view"
                app:layout_constraintTop_toTopOf="@id/news_item_published_icon_image_view"
                app:layout_constraintBottom_toBottomOf="@+id/news_item_published_icon_image_view"
                android:layout_marginStart="8dp"
                tools:text="@string/news_control_panel_not_published"
                android:textSize="13sp"
                android:maxLines="2"
                android:ellipsize="end"/>

            <ImageView
                android:id="@+id/delete_news_item_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/news_item_author_text_view"
                android:layout_marginTop="24dp"
                android:layout_marginStart="220dp"/>

            <ImageView
                android:id="@+id/edit_news_item_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/delete_news_item_image_view"
                app:layout_constraintTop_toBottomOf="@id/news_item_author_text_view"
                app:layout_constraintEnd_toStartOf="@id/view_news_item_image_view"
                android:layout_marginTop="24dp"/>

            <ImageView
                android:id="@+id/view_news_item_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:padding="0dp"
                android:src="@drawable/expand_more_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/news_item_author_text_view" />

            <TextView
                android:id="@+id/news_item_description_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/news_item_published_icon_image_view"
                tools:text="@string/news_item_description"
                android:textSize="14sp"
...
