...
            android:checkable="true"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:contentDescription="@string/sort_news_list_button"
            app:icon="@drawable/ic_sort_18"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/filter_news_material_button"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/filter_news_material_button"
            style="@style/materialButtonTheme"
            android:layout_width="wrap_content"
...
            android:background="@android:color/transparent"
            android:checkable="true"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:icon="@drawable/ic_filters_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/edit_news_material_button"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_news_material_button"
            style="@style/materialButtonTheme"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateIncludedIds" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/all_news_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="20dp"
        android:text="@string/all_news"
        android:textAllCaps="true"
...
        android:id="@+id/all_news_cards_block_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/news_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
